Implementacao das regras do jogo

--- a/jokenpo/index.html
+++ b/jokenpo/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style.css">    
-    <title>Jokenpô - PPT</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <title>Jokenpô - P P T</title>
 </head>
 
 <body>
@@ -17,9 +17,9 @@
                 <h2 id="jogador-nome">Jodador</h2>
                 <span id="jogador-pontos">0</span>
                 <ul id="jogador-escolha">
-                    <li><a id="jogador-escolha-1" ><img src="./images/pedra.png"></a></li>
-                    <li><a id="jogador-escolha-2" ><img src="./images/papel.png"></a></li>
-                    <li><a id="jogador-escolha-3" ><img src="./images/tesoura.png"></a></li>
+                    <li><a id="jogador-escolha-1"><img src="./images/pedra.png"></a></li>
+                    <li><a id="jogador-escolha-2"><img src="./images/papel.png"></a></li>
+                    <li><a id="jogador-escolha-3"><img src="./images/tesoura.png"></a></li>
                 </ul>
             </div>
             <div id="versus">
@@ -28,17 +28,18 @@
             <div id="computador">
                 <h2 id="computador-nome">Computador</h2>
                 <span id="computador-pontos">0</span>
-                <ul id="jogador-escolha">
-                    <li><a id="jogador-escolha-1" ><img src="./images/pedra.png"></a></li>
-                    <li><a id="jogador-escolha-2" ><img src="./images/papel.png"></a></li>
-                    <li><a id="jogador-escolha-3" ><img src="./images/tesoura.png"></a></li>
+                <ul id="computador-escolha">
+                    <li><a id="computador-escolha-1"><img src="./images/pedra.png"></a></li>
+                    <li><a id="computador-escolha-2"><img src="./images/papel.png"></a></li>
+                    <li><a id="computador-escolha-3"><img src="./images/tesoura.png"></a></li>
                 </ul>
             </div>
         </div>
         <div id="mensagem">
-            <h3>Mensagem</h3>
+            <h3>Bem-vindo! Pronto para o jogo!?</h3>
         </div>
     </div>
 </body>
+<script src="./script.js"></script>
 
 </html>
